--- a/site/docs.html
+++ b/site/docs.html
@@ -1,154 +1,158 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Премия Росгвардии</title>
-    <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/docs.css" rel="stylesheet">
-  </head>
 
-  <body>
-    <header>
-      <div class="logo-container">
-        <div class="title-container">
-          <img class="logo" src="/img/logo-white.png" width="127" height="120" alt="Герб Росгвардии">
-          <div class="title">
-            Конкурс на соискание премий Росгвардии<br>
-            <span class="sub-title">В области литературы и искусства, в области науки и техники</span>
-          </div> 
+<head>
+  <meta charset="UTF-8">
+  <title>Премия Росгвардии</title>
+  <link href="/css/main.css" rel="stylesheet">
+  <link href="/css/docs.css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="logo-container">
+      <div class="title-container">
+        <img class="logo" src="/img/logo-white.png" width="127" height="120" alt="Герб Росгвардии">
+        <div class="title">
+          Конкурс на соискание премий Росгвардии<br>
+          <span class="sub-title">В области литературы и искусства, в области науки и техники</span>
         </div>
       </div>
-    </header>
-    <nav>
-      <a href="/index.html">Общие сведения</a>
-      <a href="/laureats.html">Лауреаты</a>
-      <a href="/review.html">Порядок рассмотрения работ</a>
-      <a href="/docs.html">Образцы документов</a>
-      <a href="/inform.html">Справочная информация</a>
-    </nav>
+    </div>
+  </header>
+  <nav>
+    <a href="/index.html">Общие сведения</a>
+    <a href="/laureats.html">Лауреаты</a>
+    <a href="/review.html">Порядок рассмотрения работ</a>
+    <a href="/docs.html">Образцы документов</a>
+    <a href="/inform.html">Справочная информация</a>
+  </nav>
 
-    <main>
-      <h2 style="margin-top: 30px;">Образцы документов</h2>
+  <main>
+    <h2 style="margin-top: 30px;">Образцы документов</h2>
 
-      <div class="docs_container">
+    <div class="docs_container">
 
-        <div class="doc_item_main">
-          <a href="/docs/Rekomenduemaya_komplektnost_dokumentov_i_materialov.pdf">
-            <div class="doc_download_main">
-              <div class="image"></div>
-              <span class="text_main">Рекомендуемая комплектность документов и материалов</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Predstavlenie_raboty_na_soiskanie_premii_Rosgvardii_(dlya organizacii).pdf" download>
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Представление работы на соискание премии Росгвардии (от организации)</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Informacionnaya_kartochka.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Информационная карточка</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Predstavlenie_raboty_na_soiskanie_premii_Rosgvardii_(dlya_avtorskogo_kollektiva).pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Представление работы на соискание премии Росгвардии (авторский коллектив)</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Annotaciya_raboty.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Аннотация работы</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Pismo-razreshenie_na_publikaciyu_v_otkrytoj_pechati.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Письмо-разрешение на публикацию в открытой печати</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Osnovnoe_soderzhanie_raboty.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Основное содержание работы</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Soglasie_avtora_na_obrabotku_personalnyh_dannyh.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Согласие автора работы на обработку персональных данных</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Vypiska_iz_protokola_zasedaniya_uchenogo_soveta(sobraniya_trudovogo_kollektiva).pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Выписка из протокола заседания ученого (научного, научно-технического) совета (собрания трудового коллектива)</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Soglasie_avtora_na_peredachu_personalnyh_dannyh_tretim_licam.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Согласие на передачу персональных данных третьим лицам</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Spravka_o_tvorcheskom_vklade_avtorov_raboty_vydvigaemoj_na_soiskanie_premii_Rosgvardii.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Справка о творческом вкладе авторов работы, выдвигаемой на соискание премии Росгвардии</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Spravka_ob_ekonomicheskom_effekte.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Справка об экономическом эффекте от реализации работы</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="doc_item">
-          <a href="/docs/Svedeniya_ob_avtore.pdf">
-            <div class="doc_download">
-              <div class="image"></div>
-              <span class="text">Сведения об авторе</span>
-            </div>
-          </a>
-        </div>
+      <div class="doc_item_main">
+        <a href="/docs/Rekomenduemaya_komplektnost_dokumentov_i_materialov.pdf">
+          <div class="doc_download_main">
+            <div class="image"></div>
+            <span class="text_main">Рекомендуемая комплектность документов и материалов</span>
+          </div>
+        </a>
       </div>
-    </main>
-  </body>
+
+      <div class="doc_item">
+        <a href="/docs/Predstavlenie_raboty_na_soiskanie_premii_Rosgvardii_(dlya organizacii).pdf" download>
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Представление работы на соискание премии Росгвардии (от организации)</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Informacionnaya_kartochka.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Информационная карточка</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Predstavlenie_raboty_na_soiskanie_premii_Rosgvardii_(dlya_avtorskogo_kollektiva).pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Представление работы на соискание премии Росгвардии (авторский коллектив)</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Annotaciya_raboty.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Аннотация работы</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Pismo-razreshenie_na_publikaciyu_v_otkrytoj_pechati.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Письмо-разрешение на публикацию в открытой печати</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Osnovnoe_soderzhanie_raboty.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Основное содержание работы</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Soglasie_avtora_na_obrabotku_personalnyh_dannyh.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Согласие автора работы на обработку персональных данных</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Vypiska_iz_protokola_zasedaniya_uchenogo_soveta(sobraniya_trudovogo_kollektiva).pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Выписка из протокола заседания ученого (научного, научно-технического) совета (собрания
+              трудового коллектива)</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Soglasie_avtora_na_peredachu_personalnyh_dannyh_tretim_licam.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Согласие на передачу персональных данных третьим лицам</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Spravka_o_tvorcheskom_vklade_avtorov_raboty_vydvigaemoj_na_soiskanie_premii_Rosgvardii.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Справка о творческом вкладе авторов работы, выдвигаемой на соискание премии
+              Росгвардии</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Spravka_ob_ekonomicheskom_effekte.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Справка об экономическом эффекте от реализации работы</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="doc_item">
+        <a href="/docs/Svedeniya_ob_avtore.pdf">
+          <div class="doc_download">
+            <div class="image"></div>
+            <span class="text">Сведения об авторе</span>
+          </div>
+        </a>
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
