--- a/site/index.html
+++ b/site/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Премия Росгвардии</title>
-    <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/docs.css" rel="stylesheet">
-    <link href="/css/index.css" rel="stylesheet">
-  </head>
 
-  <body>
-    <header>
-      <div class="logo-container">
-        <div class="title-container">
-          <img class="logo" src="https://rosguard.gov.ru/static/images/main/rosgvard_logo_white.png" width="127" height="120" alt="Герб Росгвардии">
-          <div class="title">
-            Конкурс на соискание премий Росгвардии<br>
-            <!-- В области литературы и искусства, в области науки и техники -->
-            <span class="sub-title">В области литературы и искусства, в области науки и техники</span>
-          </div> 
+<head>
+  <meta charset="UTF-8">
+  <title>Премия Росгвардии</title>
+  <link href="/css/main.css" rel="stylesheet">
+  <link href="/css/docs.css" rel="stylesheet">
+  <link href="/css/index.css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="logo-container">
+      <div class="title-container">
+        <img class="logo" src="https://rosguard.gov.ru/static/images/main/rosgvard_logo_white.png" width="127"
+          height="120" alt="Герб Росгвардии">
+        <div class="title">
+          Конкурс на соискание премий Росгвардии<br>
+          <!-- В области литературы и искусства, в области науки и техники -->
+          <span class="sub-title">В области литературы и искусства, в области науки и техники</span>
         </div>
       </div>
-    </header>
-    <nav>
-      <a href="/index.html">Общие сведения</a>
-      <a href="/laureats.html">Лауреаты</a>
-      <a href="/review.html">Порядок рассмотрения работ</a>
-      <a href="/docs.html">Образцы документов</a>
-      <a href="/inform.html">Справочная информация</a>
-    </nav>
+    </div>
+  </header>
+  <nav>
+    <a href="/index.html">Общие сведения</a>
+    <a href="/laureats.html">Лауреаты</a>
+    <a href="/review.html">Порядок рассмотрения работ</a>
+    <a href="/docs.html">Образцы документов</a>
+    <a href="/inform.html">Справочная информация</a>
+  </nav>
 
-    <main>
-      <section class="descript-container">
-        <figure class="flag-statue">
-          <img src="/img/Statue.png" alt="Статуэтка" width="203" height="283">
-        </figure>
-          <p class="text-descript">
-           Премии Росгвардии в области литературы и искусства, в области науки и техники являются признанием заслуг военнослужащих, 
-           лиц, проходящих службу в войсках национальной гвардии Российской Федерации и имеющих специальные звания полиции, 
-           федеральных государственных гражданских служащих, работников войск национальной гвардии, граждан и организаций.<br><br>
-           <span>Конкурс на соискание премий Росгвардии проводится с 2020 года и является ежегодным.</span>
-          </p>
-      </section>
+  <main>
+    <section class="descript-container">
+      <figure class="flag-statue">
+        <img src="/img/Statue.png" alt="Статуэтка" width="203" height="283">
+      </figure>
+      <p class="text-descript">
+        Премии Росгвардии в области литературы и искусства, в области науки и техники являются признанием заслуг
+        военнослужащих,
+        лиц, проходящих службу в войсках национальной гвардии Российской Федерации и имеющих специальные звания полиции,
+        федеральных государственных гражданских служащих, работников войск национальной гвардии, граждан и
+        организаций.<br><br>
+        <span>Конкурс на соискание премий Росгвардии проводится с 2020 года и является ежегодным.</span>
+      </p>
+    </section>
 
-      <h2>Премии Росгвардии присуждаются</h2>
+    <h2>Премии Росгвардии присуждаются</h2>
 
-      <ul class="present-list">
-        <li>В области литературы и искусства (две премии) - за наиболее талантливые произведения (иные результаты творческой деятельности), пропагандирующие деятельность Росгвардии;</li>
-        <li>в области науки и техники - за достижения в развитии научной, научно-технической деятельности в интересах Росгвардии. Одна премия Росгвардии присуждается в номинации «Наука» и одна премия Росгвардии - в номинации «Наука и техника».</li>
-      </ul>
+    <ul class="present-list">
+      <li>В области литературы и искусства (две премии) - за наиболее талантливые произведения (иные результаты
+        творческой деятельности), пропагандирующие деятельность Росгвардии;</li>
+      <li>в области науки и техники - за достижения в развитии научной, научно-технической деятельности в интересах
+        Росгвардии. Одна премия Росгвардии присуждается в номинации «Наука» и одна премия Росгвардии - в номинации
+        «Наука и техника».</li>
+    </ul>
 
-      <!-- <section class="images-premia">
+    <!-- <section class="images-premia">
         <div class="liter">
           <p><b>Литература и искусство</b></p>
           <img src="/img/books.png" max-width="527px">
@@ -61,66 +68,66 @@
         </div>
       </section> -->
 
-      <h2 style="padding-top: 15px; margin-bottom: 50px;">Каждая премия включает</h2>
-    
-      <div class="prizes">
-        <div>
-          <img src="/img/rubble.png" alt="рубль">
-          <p>Денежная премия <br> 120 000 ₽</p>
-        </div>
+    <h2 style="padding-top: 15px; margin-bottom: 50px;">Каждая премия включает</h2>
 
-        <div>
-          <img src="/img/statue-min.png" alt="рубль">
-          <p>Приз <br> "Лауреат премии <br> Росгвардии"</p>
-        </div>
-
-        <div>
-          <img src="/img/medal.png" alt="рубль">
-          <p>Нагрудный знак <br> "Лауреат премии <br> Росгвардии"</p>
-        </div>
-
-        <div>
-          <img src="/img/diplom.png" alt="рубль">
-          <p>Диплом <br> "Лауреат премии <br> Росгвардии"</p>
-        </div>
-
+    <div class="prizes">
+      <div>
+        <img src="/img/rubble.png" alt="рубль">
+        <p>Денежная премия <br> 120 000 ₽</p>
       </div>
 
-      <h2 style="padding-top: 20px;">Контакты</h2>
+      <div>
+        <img src="/img/statue-min.png" alt="рубль">
+        <p>Приз <br> "Лауреат премии <br> Росгвардии"</p>
+      </div>
 
-      <section class="contact-container">
-        <p style="margin-bottom: 20px;">Работы, выдвигаемые на соискание премий Росгвардии направляются:</p>
-        <div class="contact-text">
-          <p>
-            <b>Литература и искусство</b>
-            в Главное военно-политическое <br> 
-            управление Федеральной службы <br> 
-            войск национальной гвардии <br> 
-            Российской Федерации <br><br>
-            109074 г. Москва, Китайгородский <br> проезд д. 7, стр. 2
-          </p>
+      <div>
+        <img src="/img/medal.png" alt="рубль">
+        <p>Нагрудный знак <br> "Лауреат премии <br> Росгвардии"</p>
+      </div>
 
-          <p class="contact-sci">
-            <b>Наука и техника</b>
-            в Департамент техники и научно- <br> 
-            исследовательской деятельности <br> 
-            Федеральной службы войск <br> 
-            национальной гвардии Российской <br>
-            Федерации<br><br>
-            101000 г. Москва, ул. Маросейка, <br> д. 12, стр. 2
-          </p>
-        </div>
-        <p class="secret">
-          <b>Секретарь комиссии по премиям Росгвардии</b><br>
-          полковник Пивоваров Роман Викторович<br>
-          <span class="telephone"><img src="/img/phone-icon.png" alt="телефон">   +7(495) 361-80-94</span>
+      <div>
+        <img src="/img/diplom.png" alt="рубль">
+        <p>Диплом <br> "Лауреат премии <br> Росгвардии"</p>
+      </div>
+
+    </div>
+
+    <h2 style="padding-top: 20px;">Контакты</h2>
+
+    <section class="contact-container">
+      <p style="margin-bottom: 20px;">Работы, выдвигаемые на соискание премий Росгвардии направляются:</p>
+      <div class="contact-text">
+        <p>
+          <b>Литература и искусство</b>
+          в Главное военно-политическое <br>
+          управление Федеральной службы <br>
+          войск национальной гвардии <br>
+          Российской Федерации <br><br>
+          109074 г. Москва, Китайгородский <br> проезд д. 7, стр. 2
         </p>
-      </section>
+
+        <p class="contact-sci">
+          <b>Наука и техника</b>
+          в Департамент техники и научно- <br>
+          исследовательской деятельности <br>
+          Федеральной службы войск <br>
+          национальной гвардии Российской <br>
+          Федерации<br><br>
+          101000 г. Москва, ул. Маросейка, <br> д. 12, стр. 2
+        </p>
+      </div>
+      <p class="secret">
+        <b>Секретарь комиссии по премиям Росгвардии</b><br>
+        полковник Пивоваров Роман Викторович<br>
+        <span class="telephone"><img src="/img/phone-icon.png" alt="телефон"> +7(495) 361-80-94</span>
+      </p>
+    </section>
 
 
 
-      <img src="/img/rosguard-emblem.png" alt="эмблема Росгвардии" style="align-self: center;">
-    </main>
-  </body>
+    <img src="/img/rosguard-emblem.png" alt="эмблема Росгвардии" style="align-self: center;">
+  </main>
+</body>
 
 </html>
